2006-12-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Code cleanup.
	* src/lib/glib-mkenums.rb: Reimplement as a pure ruby library.

2006-12-25  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/glib2.rb (GLib.utf8_validate): removed needless code.

2006-12-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_convert.c: GLib.utf8_validate becomes deprecated.
	Use GLib::UTF8.validate instead.
	* sample/bookmarkfile.rb: Add for GLib::BookmarkFile sample.

2006-12-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_bookmarkfile.c: Add GLib::BookmarkFile
	* src/rbglib_win32.c: Code cleanup. Imprement all functions.

2006-12-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_keyfile.c: Add GLib::Keyfile.
	* sample/keyfile.rb: Add a sample for GLib::KeyFile.

2006-12-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_closure.c: Fix warnings on x86_64.
	* src/rbglib_unicode.c: Code cleanup.
	* src/lib/glib-mkenums.rb: Make GLib::MkEnums.
	* src/lib/mkmf-gnome2.rb: Follow above change.
	
2006-12-11  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_maincontext.c: Add GLib::Source.current for GLib-2.12.
	Add GLib::MainContext#owner? for GLib-2.10.
	GLib::Timeout#add_seconds, #source_new_seconds for GLib-2.14.

2006-12-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_unicode.c:
	- GLib::Unicode::XXX -> GLib::Unicode::Type::XXX.
	- GLib::UnicodeBreak::XXX -> GLib::Unicode::BreakType::XXX.
	- GLib::UnicodeScript::XXX -> GLib::Unicode::Script::XXX.
	* tests/test_unicode.rb: followed the changes.

	* src/lib/glib2.rb: GLib.utf8_validate is deprecated. Use
	GLib::UTF8.validate instead.
	* src/rbglib_unicode.c:
	- moved GLib.unichar_* to GLib::UniChar.*.
	- moved GLib.unicode_* to GLib::Unicode.*.
	- moved GLib.utf8_* to GLib::UTF8.*.
	- moved GLib.utf16_* to GLib::UTF16.*.
	- moved GLib.ucs4_* to GLib::UCS4.*.
	- removed GLib::UNICODE_*.
	- removed GLib::UNICODE_BREAK_*.
	- removed GLib::NORMALIZE_*.
	* tests/test_unicode.rb: followed the changes.
