@@ -7,7 +7,7 @@
 #
 # This program is licenced under the same license of Ruby-GNOME2.
 #
-# $Id: glib-mkenums.rb,v 1.4 2006/12/26 08:48:53 mutoh Exp $
+# $Id: glib-mkenums.rb,v 1.5 2006/12/26 11:17:24 ktou Exp $
 #
 
 module GLib
@@ -161,7 +161,7 @@ GType #{@enum_name}_get_type (void);
 
     # Create a C source as a String.
     def create_c
-      ret = "\n/* Generated by glib-mkenums.rb ($Revision: 1.4 $) */ \n\n"
+      ret = "\n/* Generated by glib-mkenums.rb ($Revision: 1.5 $) */ \n\n"
       ret << %Q[#include "#{@target_filename}.h"\n]
       @include_files.each do |file|
         ret << "#include <#{file}>\n"
@@ -177,14 +177,14 @@ GType #{@enum_name}_get_type (void);
       header = "#{@target_filename}.h"
       const = "__#{File.basename(header).upcase.gsub(/-|\./, '_')}__"
 
-      ret = "\n/* Generated by glib-mkenums.rb ($Revision: 1.4 $) */ \n\n"
+      ret = "\n/* Generated by glib-mkenums.rb ($Revision: 1.5 $) */ \n\n"
       ret << "#ifndef #{const}\n"
       ret << "#define #{const}\n\n"
       ret << "#include <glib-object.h>\n\n"
       ret << "G_BEGIN_DECLS"
       ret << create_enums(:create_h)
       ret << "\n\nG_END_DECLS\n\n"
-      ret << "#endif /* #{const}*/\n"
+      ret << "#endif /* #{const} */\n"
       ret << "\n/* Generated data ends here */\n\n"
       ret
     end
